# model_viewer

./: .gitignore  README.md  blender.ipynb  main.py  pyproject.toml  run.sh
model_viewer/: __init__.py  base.py  presets.py  run.py  simple_viewer.py  turntable_viewer.py  utils.py
model_viewer/deprecated/: base_viewer.py  simple_viewer.py  turntable_viewer.py
scripts/: create_gifs.py
