[project]
name = "model-viewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "bpy>=4.4.0",
]

[dependency-groups]
nb = [
    "ipykernel>=6.29.5",
    "numpy<2",
]

[tool.ruff]
lint.select = ["E", "F", "I", "PLC", "PLE", "PLR", "PLW"]
ignore = ["PLR0913"]
